--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,10 @@
     }
     @media print {
       .no-print { display: none !important; }
-      body { -webkit-print-color-adjust: exact; }
+      body { 
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+      }
       .print-shadow-none { box-shadow: none !important; }
       .print-p-0 { padding: 0 !important; }
     }
