--- a/index.html
+++ b/index.html
@@ -20,26 +20,9 @@
   <p><a href="resume.html">View Interactive Resume</a></p>
 
 
-  <h2>🚀 Featured Projects</h2>
+  <h2>Featured Projects</h2>
 
-  <div class="project">
-    <h3><a href="https://github.com/jaquanwatson/account-inactivity-monitor">Account Inactivity Monitor</a></h3>
-    <p>Tracks and manages inactive AD/M365 accounts using PowerShell.</p>
-  </div>
-
-  <div class="project">
-    <h3><a href="https://github.com/jaquanwatson/m365-license-tracker">M365 License Tracker</a></h3>
-    <p>Logs and summarizes license assignments for Microsoft 365.</p>
-  </div>
-
-  <div class="project">
-    <h3><a href="https://github.com/jaquanwatson/password-reminder-bot">Password Reminder Bot</a></h3>
-    <p>Sends automated reminders for upcoming password expirations.</p>
-  </div>
-
-  <div class="project">
-    <h3><a href="https://github.com/jaquanwatson/notion-automator">Notion Automator</a></h3>
-    <p>Automates recurring Notion task resets using Python and the Notion API.</p>
+ 
   </div>
 
   <hr>
